# aticket-cli

./: .gitignore  README.md  SKILL.md  aticket-cli  pyproject.toml
references/: claim.md  discover.md  handoff-and-archive.md  message.md  work-on-held-ticket.md
skills/blank-agent-blackbox/: SKILL.md
skills/blank-agent-blackbox/scripts/: agent-env-blackbox.sh
tests/: conftest.py  test_cli_smoke.py  test_config.py  test_fork.py  test_lifecycle.py  test_message.py  test_render.py  test_reporter.py  test_search.py  test_squash.py
ticket_cli/: __init__.py  __main__.py  atomicio.py  brief.py  cli.py  config.py  db.py  fork.py  identity.py  lifecycle.py  mdparse.py  notice.py  notice_alert.py  paths.py  reminders.py  render.py  reporter.py  search_index.py  squash.py  ticket_new.py  timeutil.py
ticket_cli/templates/: default-config.toml
