[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "aticket-cli"
version = "0.1.0"
description = "Consolidated CLI for agent work tickets (sqlite-backed TICKET.md + fork lifecycle)."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "tsshi" }]
keywords = ["agent", "cli", "tickets", "workflow", "worktree"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/st1page/aticket-cli"
Repository = "https://github.com/st1page/aticket-cli"
Issues = "https://github.com/st1page/aticket-cli/issues"
Releases = "https://github.com/st1page/aticket-cli/releases"

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
aticket-cli = "ticket_cli.cli:main"

[tool.setuptools.packages.find]
include = ["ticket_cli*"]

[tool.setuptools.package-data]
ticket_cli = ["templates/*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
